# home_work

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: home_work.yml
example_01_1/: CMakeLists.txt  main.cpp
example_01_2/: CMakeLists.txt
example_01_2/hello_bin/: CMakeLists.txt
example_01_2/hello_bin/src/: main.cpp
example_01_2/hello_lib/: CMakeLists.txt
example_01_2/hello_lib/include/: greeting.hpp
example_01_2/hello_lib/src/: greeting.cpp
example_02_dynamic/: .dockerignore  CMakeLists.txt  dockerfile  main.cpp
example_02_static/: CMakeLists.txt  main.cpp
