cmake_minimum_required(VERSION 3.16)
project(02-sdl-static)

execute_process(COMMAND sdl2-config --cflags RESULT_VARIABLE CMD_RES OUTPUT_VARIABLE SDL2_CFLAGS_INCLUDE ERROR_VARIABLE ERR_VAR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND sdl2-config --static-libs RESULT_VARIABLE CMD_RES OUTPUT_VARIABLE SDL2_CFLAGS_LIBS ERROR_VARIABLE ERR_VAR OUTPUT_STRIP_TRAILING_WHITESPACE)

message("SDL2_CFLAGS_INCLUDE=${SDL2_CFLAGS_INCLUDE}; CMD_RES=${CMD_RES}; ERR_VAR=${ERR_VAR}")
message("SDL2_CFLAGS_LIBS=${SDL2_CFLAGS_LIBS}; CMD_RES=${CMD_RES}; ERR_VAR=${ERR_VAR}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 ${SDL2_CFLAGS_INCLUDE} ${SDL2_CFLAGS_LIBS}")

include_directories(${SDL2_INCLUDE_DIR})

add_executable(${PROJECT_NAME} main.cpp)
#target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)

#find_package(SDL2 REQUIRED)
#target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2-static)



install(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${CMAKE_CURRENT_LIST_DIR}/../tests/ex02/bin
        LIBRARY DESTINATION ${CMAKE_CURRENT_LIST_DIR}/../tests/ex02/lib
        ARCHIVE DESTINATION ${CMAKE_CURRENT_LIST_DIR}/../tests/ex02/lib)
